k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-syllabus
  labels:
    istio-injection: enabled
