k8s/base/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: simple-syllabus
spec:
  selector:
    app: simple-syllabus-reporter
  ports:
    - port: 4000
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-syllabus-reporter
  namespace: simple-syllabus
  annotations:
    argocd-image-updater.argoproj.io/image-list: app=ghcr.io/alexmickelson/simpleSyllabusReporter
    argocd-image-updater.argoproj.io/app.update-strategy: latest
    argocd-image-updater.argoproj.io/write-back-method: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-syllabus-reporter
  template:
    metadata:
      labels:
        app: simple-syllabus-reporter
    spec:
      containers:
        - name: app
          image: ghcr.io/alexmickelson/simpleSyllabusReporter:latest
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
