k8s/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-syllabus
  namespace: simple-syllabus
spec:
  parentRefs:
    - name: mesh
      kind: Mesh
      group: gateway.networking.k8s.io
    - name: changed by kustomize
      namespace: istio-system
      kind: Gateway
  hostnames:
    - webapp.simple-syllabus.svc.cluster.local
    - "changed by kustomize"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webapp
          port: 4000
